[KSCOR-430][KSCOR-436]Visual fixes for course catalog browse and category management to more closely align with other areas of the app
git-svn-id: https://svn.kuali.org/repos/student/trunk@16353 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-lum/ks-lum-ui/src/main/resources/org/kuali/student/lum/ui/theme/standard/public/css/LumMain.css
+++ b/ks-lum/ks-lum-ui/src/main/resources/org/kuali/student/lum/ui/theme/standard/public/css/LumMain.css
@@ -310,13 +310,15 @@
 	margin-bottom: 10px;
 	margin-left: 10px;
 }
+.Lum-DocumentHeader-Spacing {
+    margin-left: 20px;
+}
 .KSLOCategoryManagementMainPanel {
-	background-color: white;
-	margin-top: 30px;
-    padding-top: 10px;
-    padding-left: 16px;
+	margin-top: 5px;
+    margin-left: 20px;
 }
 .KSLOCategoryManagementFilterPanel {
+	padding-right: 20px;
 }
 .KSLOCategoryManagementFilterLabel {
 	font-weight: bold;
